[gd_scene load_steps=9 format=3 uid="uid://cupn40w2bar1w"]

[ext_resource type="Script" path="res://clickPlayer.gd" id="1_i3ris"]
[ext_resource type="Texture2D" uid="uid://5lfyd3jd8ftk" path="res://Tex/dude.png" id="2_dsyjn"]
[ext_resource type="AudioStream" uid="uid://c7xl57l64xbeo" path="res://Sounds/gunshot.ogg" id="3_3e314"]
[ext_resource type="AudioStream" uid="uid://e1h5yadm1trh" path="res://Sounds/footsteps.ogg" id="4_ldwk3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qik3l"]
radius = 0.677095
height = 3.6797

[sub_resource type="CylinderMesh" id="CylinderMesh_5602b"]
height = 1.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4r7ut"]
transparency = 1
albedo_texture = ExtResource("2_dsyjn")
metallic_specular = 0.0

[sub_resource type="PlaneMesh" id="PlaneMesh_8ei7o"]
material = SubResource("StandardMaterial3D_4r7ut")
size = Vector2(2, 3.6)

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_i3ris")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.914698, 0)
shape = SubResource("CapsuleShape3D_qik3l")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.914698, 0)
visible = false
mesh = SubResource("CylinderMesh_5602b")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="MouseTracker" type="Node3D" parent="."]

[node name="HoldPoint" type="Node3D" parent="MouseTracker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.994, -0.5)

[node name="Flashlight" type="SpotLight3D" parent="MouseTracker/HoldPoint"]

[node name="Camera3D" type="Camera3D" parent="MouseTracker/HoldPoint"]

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.825238, 0)
mesh = SubResource("PlaneMesh_8ei7o")

[node name="MuzzleFlash" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0141078, 1.1341, 0.0869126)
visible = false
light_energy = 3.04
light_size = 0.228

[node name="SfxGunshot" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_3e314")

[node name="SfxFootsteps" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_ldwk3")
parameters/looping = true

[node name="Think" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.28289, 0.367153)
visible = false
sorting_offset = 100000.0
text = "Placeholder"
autowrap_mode = 3
